--- a/V3.ipynb
+++ b/V3.ipynb
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -261,7 +261,7 @@
         "  delta_lat_deviation = change in lateral deviation (lat_off)\n",
         "\n",
         "  \"\"\"\n",
-        "  def __init__(self, obs,a,desired_parameters, control_parameters):\n",
+        "  def __init__(self, obs,a, desired_parameters, control_parameters):\n",
         "    self.obs = obs\n",
         "    self.a = a\n",
         "\n",
@@ -269,12 +269,12 @@
         "    self.s0, self.v0 = desired_parameters\n",
         "\n",
         "    # Unpack control parameters: [a, b, delta, T]\n",
-        "    self.a, self.b, self.delta, self.T = control_parameters\n",
+        "    self.la, self.b, self.delta, self.T = control_parameters\n",
         "\n",
         "  def ego_state_idm(self):\n",
         "      ax, ay, avx, avy, athetha, _ = self.obs[0]\n",
         "      self._ego_state_idm = {\"x\": ax, \"y\": ay, \"vx\": avx,\"thetha\": athetha,\n",
-        "                         \"longitudinal_acceleration\":self.a}\n",
+        "                         \"longitudinal_acceleration\":self.la}\n",
         "\n",
         "      return self._ego_state_idm\n",
         "\n",
@@ -304,6 +304,7 @@
         "    # Lead State Parameters on the same Lane (5 columns: presence, x, y, vx, vy)\n",
         "    ego_vehicle = env.unwrapped.vehicle\n",
         "    lead_vehicle = env.unwrapped.road.neighbour_vehicles(ego_vehicle, lane_index=ego_vehicle.lane_index)[0]\n",
+        "\n",
         "    if lead_vehicle:\n",
         "      gap = lead_vehicle.position[0] - ego_vehicle.position[0]\n",
         "      delta_velocity = ego_vehicle.velocity[0] - lead_vehicle.velocity[0]\n",
@@ -315,20 +316,20 @@
         "    return self.longitudinal_lead_state\n",
         "\n",
         "\n",
-        "    def idm_controller(self, input_variables):\n",
-        "        # Unpack input variables: [s, v, delta_v]\n",
-        "        s, v, delta_v = input_variables\n",
+        "  def idm_controller(self):\n",
+        "      # Unpack input variables: [s, v, delta_v]\n",
+        "      s, v, delta_v = self.longitudinal_lead_state()['x'], self.ego_state_idm()['vx'], self.longitudinal_lead_state()['vx']\n",
         "\n",
-        "        # Small epsilon to account for very small gaps and avoid division by zero\n",
-        "        epsilon = 1e-6\n",
+        "      # Small epsilon to account for very small gaps and avoid division by zero\n",
+        "      epsilon = 1e-6\n",
         "\n",
-        "        # Desired gap: s* = s0 + v*T + (v * delta_v) / (2 * sqrt(a * b))\n",
-        "        desired_gap = self.s0 + max(0, v * self.T + ((v * delta_v) / (2 * math.sqrt(self.a * self.b))))\n",
+        "      # Desired gap: s* = s0 + v*T + (v * delta_v) / (2 * sqrt(a * b))\n",
+        "      desired_gap = self.s0 + max(0, v * self.T + ((v * delta_v) / (2 * math.sqrt(self.a * self.b))))\n",
         "\n",
-        "        # IDM acceleration: a_IDM = a * [ 1 - (v / v0)^delta - (s* / s)^2 ]\n",
-        "        acceleration = self.a * (1 - (v / self.v0)**self.delta - (desired_gap / (s + epsilon))**2)\n",
+        "      # IDM acceleration: a_IDM = a * [ 1 - (v / v0)^delta - (s* / s)^2 ]\n",
+        "      acceleration = self.a * (1 - (v / self.v0)**self.delta - (desired_gap / (s + epsilon))**2)\n",
         "\n",
-        "        return acceleration\n",
+        "      return acceleration\n",
         "\n",
         "\n",
         "  #Reward Function\n",
@@ -381,7 +382,7 @@
         "    self.obs = obs\n",
         "    self.action = action\n",
         "    L = env.unwrapped.vehicle.LENGTH\n",
-        "\n",
+        "    self.acc = self.idm_controller()\n",
         "\n",
         "    \"\"\"\n",
         "    Steering Angle: theta = atan(a_yaw/v^2)\n",
@@ -390,7 +391,7 @@
         "    \"\"\"\n",
         "\n",
         "    self.angle = math.atan(L*action/self.ego_state_idm()['vx']**2)\n",
-        "    self.action = [self.angle,self.action]\n",
+        "    self.action = [self.acc,self.angle]\n",
         "\n",
         "    return self.action"
       ]
