--- a/V3.ipynb
+++ b/V3.ipynb
@@ -431,7 +431,16 @@
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.actor(x), self.critic(x)"
+        "        return self.actor(x), self.critic(x)\n",
+        "\n",
+        "    def act(self, state):\n",
+        "        action_logits, _ = self.forward(state)\n",
+        "        action_probs = torch.softmax(action_logits, dim=-1)\n",
+        "        action_dist = torch.distributions.Categorical(action_probs)\n",
+        "        action = action_dist.sample()\n",
+        "        log_prob = action_dist.log_prob(action)\n",
+        "\n",
+        "        return action.item(), log_prob"
       ],
       "metadata": {
         "id": "MW5pZ2IxtbyI"
