--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,47 +21,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "dfcc4047-f9e5-4e68-e6f9-60c9969f303d"
+        "outputId": "b18848dd-746f-44f7-f353-7d755adae190"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Collecting highway-env\n",
-            "  Downloading highway_env-1.10.1-py3-none-any.whl.metadata (16 kB)\n",
-            "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
-            "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
-            "Requirement already satisfied: pygame>=2.0.2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.6.1)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from highway-env) (3.10.0)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.2.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.15.3)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (3.1.1)\n",
-            "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (4.14.0)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.3.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (4.58.4)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.4.8)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (24.2)\n",
-            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (11.2.1)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (3.2.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
-            "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m9.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: highway-env\n",
-            "Successfully installed highway-env-1.10.1\n"
+            "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n"
           ]
         }
       ],
@@ -81,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -127,26 +101,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "y922XK-cIewr",
-        "outputId": "374d7054-3be7-4edd-bd30-edc5a38d9f18"
+        "id": "y922XK-cIewr"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7cd49c72a3d0>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Configure Environment Conditions\n",
         "config = {\n",
@@ -232,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -261,9 +220,8 @@
         "  delta_lat_deviation = change in lateral deviation (lat_off)\n",
         "\n",
         "  \"\"\"\n",
-        "  def __init__(self, obs,a, desired_parameters, control_parameters):\n",
+        "  def __init__(self, obs, desired_parameters, control_parameters):\n",
         "    self.obs = obs\n",
-        "    self.a = a\n",
         "\n",
         "    # Unpack initial parameters: [s0, v0]\n",
         "    self.s0, self.v0 = desired_parameters\n",
@@ -433,7 +391,7 @@
         "    def forward(self, x):\n",
         "        return self.actor(x), self.critic(x)\n",
         "\n",
-        "    def act(self, state):\n",
+        "    def action(self, state):\n",
         "        action_logits, _ = self.forward(state)\n",
         "        action_probs = torch.softmax(action_logits, dim=-1)\n",
         "        action_dist = torch.distributions.Categorical(action_probs)\n",
@@ -445,7 +403,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -459,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -578,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -623,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
@@ -743,6 +701,7 @@
         "\n",
         "    # Episode control variables\n",
         "    episodes_completed_in_rollout = 0\n",
+        "\n",
         "    t = 0  # Actual timesteps collected\n",
         "\n",
         "    # Env Initialization\n",
@@ -751,16 +710,10 @@
         "\n",
         "    # IDM Initialization\n",
         "    ego_state_idm = state_manager.ego_state_idm()\n",
-        "    lead_state = state_manager.longitudinal_lead_state()\n",
         "\n",
         "    # Initialize target_id\n",
         "    target_id = env.unwrapped.vehicle.lane_index[-1]\n",
         "    agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
-        "\n",
-        "    # Update IDM inputs based on initial state\n",
-        "    gap = lead_state['x']\n",
-        "    delta_velocity = lead_state['vx']\n",
-        "    input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
         "\n",
         "    episode_step = 0\n",
         "    episode_return = 0.0\n",
@@ -785,35 +738,15 @@
         "\n",
         "        # Get action and value from model\n",
         "        with torch.no_grad():\n",
-        "            action_logits, value = model(state_tensor)\n",
-        "\n",
-        "        action_logits, value = action_logits.squeeze(0), value.squeeze(0)\n",
-        "\n",
-        "        # For continuous action space, use Normal distribution\n",
-        "        action_mean = torch.tanh(action_logits)  # Keep actions in reasonable range\n",
-        "        action_std = torch.ones_like(action_mean) * 0.1  # Fixed std for simplicity\n",
-        "        m = torch.distributions.Normal(action_mean, action_std)\n",
-        "\n",
-        "        # Sample action\n",
-        "        agent_action = m.sample()\n",
-        "        log_prob = m.log_prob(agent_action).sum()  # Sum for multi-dimensional actions\n",
-        "\n",
-        "        # IDM Action\n",
-        "        idm_acceleration = ego_vehicle_idm.longitudinal_controller(input_variables)\n",
-        "        longitudinal_control = idm_acceleration\n",
-        "\n",
-        "        # Transform agent action to steering angle\n",
-        "        lateral_control = state_manager.steering_angle(agent_action.item(), L)\n",
-        "\n",
-        "        # Combine longitudinal and lateral actions\n",
-        "        action = [longitudinal_control, lateral_control]\n",
+        "          action = state_manager.action(model(state_tensor)[0])\n",
+        "          log_prob, value = model(state_tensor)\n",
         "\n",
         "        # Take action in environment\n",
         "        obs, reward, done, truncated, info = env.step(action)\n",
         "        done = done or truncated\n",
         "\n",
         "        # Update state manager with new observation and applied longitudinal control\n",
-        "        state_manager = ENV(obs, longitudinal_control)\n",
+        "        state_manager = ENV(obs)\n",
         "\n",
         "        # Compute reward based on the new state\n",
         "        reward_components = state_manager.reward_function(obs_old, obs, target_id)\n",
