--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,28 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n"
+            "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
+            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
+            "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
+            "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
+            "Requirement already satisfied: pygame>=2.0.2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.6.1)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from highway-env) (3.10.0)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.2.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.15.3)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (3.1.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (4.14.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.3.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (4.58.4)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.4.8)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (24.2)\n",
+            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (11.2.1)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
           ]
         }
       ],
@@ -55,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -101,11 +122,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "y922XK-cIewr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y922XK-cIewr",
+        "outputId": "36f8f6af-f3eb-4f43-cd05-595f9ab4fbc3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<highway_env.envs.common.action.ContinuousAction at 0x7cd377f69210>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ],
       "source": [
         "# Configure Environment Conditions\n",
         "config = {\n",
@@ -186,12 +222,12 @@
       "metadata": {
         "id": "VIZJ8ikyFhuw"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -403,7 +439,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -417,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -536,7 +572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -546,7 +582,10 @@
         "obs, _ = env.reset()\n",
         "\n",
         "# Initialize Environment Manager and Reward\n",
-        "state_manager = ENV(obs,obs[0][2])\n",
+        "control_parameters = [0.1, 5, 4, 4]  # a, b, δ, T\n",
+        "desired_parameters = [20, 10.0]       # s0, v0\n",
+        "\n",
+        "state_manager = ENV(obs,control_parameters=control_parameters, desired_parameters=desired_parameters)\n",
         "\n",
         "# State Manager for Ego and Lead State\n",
         "ego_state_idm = state_manager.ego_state_idm()\n",
@@ -591,8 +630,7 @@
         "\"\"\"Initialization\"\"\"\n",
         "################################################################################\n",
         "# IDM Initialization\n",
-        "control_parameters = [0.1, 5, 4, 4]  # a, b, δ, T\n",
-        "desired_parameters = [20, 10.0]       # s0, v0\n",
+        "\n",
         "\n",
         "# Set initial Input variables using the gap, current velocity, and relative lead velocity\n",
         "input_variables = [lead_position_idm, ego_velocity_idm, lead_velocity_idm]\n",
@@ -744,9 +782,6 @@
         "        # Take action in environment\n",
         "        obs, reward, done, truncated, info = env.step(action)\n",
         "        done = done or truncated\n",
-        "\n",
-        "        # Update state manager with new observation and applied longitudinal control\n",
-        "        state_manager = ENV(obs)\n",
         "\n",
         "        # Compute reward based on the new state\n",
         "        reward_components = state_manager.reward_function(obs_old, obs, target_id)\n",
