--- a/V3.ipynb
+++ b/V3.ipynb
@@ -770,7 +770,8 @@
         "\n",
         "        # Convert agent state dict to tensor\n",
         "        state_tensor = torch.tensor(\n",
-        "            [agent_state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
+        "            [agent_state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y',\n",
+        "                                          'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
         "            dtype=torch.float32, device=device\n",
         "        ).unsqueeze(0)\n",
         "\n",
@@ -881,11 +882,7 @@
         "            b_adv, obs_batch, action_batch, old_log_probs, old_state_values = batch_data\n",
         "\n",
         "            # Forward pass\n",
-        "            action_logits, value = model(obs_batch)\n",
-        "            action_mean = torch.tanh(action_logits)\n",
-        "            action_std = torch.ones_like(action_mean) * 0.1\n",
-        "            m = torch.distributions.Normal(action_mean, action_std)\n",
-        "            log_probs = m.log_prob(action_batch).sum(dim=-1)\n",
+        "            log_probs, value = model(obs_batch)\n",
         "\n",
         "            # Calculate ratio\n",
         "            ratio = torch.exp(log_probs - old_log_probs)\n",
@@ -901,6 +898,7 @@
         "            value_loss = F.mse_loss(returns, value.squeeze())\n",
         "\n",
         "            # Calculate entropy loss\n",
+        "            m = torch.distributions.Categorical(torch.exp(log_probs))\n",
         "            entropy_loss = -(m.entropy()).mean()\n",
         "\n",
         "            # Combined loss\n",
