--- a/V3.ipynb
+++ b/V3.ipynb
@@ -714,11 +714,6 @@
         "    target_id = env.unwrapped.vehicle.lane_index[-1]\n",
         "    agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
         "\n",
-        "    # Update IDM inputs based on initial state\n",
-        "    gap = lead_state['x']\n",
-        "    delta_velocity = lead_state['vx']\n",
-        "    input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
-        "\n",
         "    episode_step = 0\n",
         "    episode_return = 0.0\n",
         "    done = False\n",
@@ -742,12 +737,8 @@
         "\n",
         "        # Get action and value from model\n",
         "        with torch.no_grad():\n",
-        "            action_logits, value = model(state_tensor)\n",
-        "\n",
-        "\n",
-        "        # IDM Action\n",
-        "        idm_acceleration = ego_vehicle_idm.longitudinal_controller(input_variables)\n",
-        "        longitudinal_control = idm_acceleration\n",
+        "            action, log_prob, value = model.action(state_tensor)\n",
+        "            state_manager.action(obs,action)\n",
         "\n",
         "        # Combine longitudinal and lateral actions\n",
         "        action = state_manager.action(obs,agent_action.item())\n",
