--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,12 +21,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "collapsed": true,
-        "id": "AAc_-AeGEE5H"
+        "id": "AAc_-AeGEE5H",
+        "outputId": "95fc333e-10a2-4aea-fc1b-450adff1c264"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
+            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
+            "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
+            "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
+            "Requirement already satisfied: pygame>=2.0.2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.6.1)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from highway-env) (3.10.0)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.2.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.15.3)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (3.1.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (4.14.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.3.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (4.58.4)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.4.8)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (24.2)\n",
+            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (11.2.1)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install pygame\n",
         "!pip install highway-env"
@@ -43,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 88,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -89,24 +122,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 89,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "4690bf37-de15-47b5-b3d4-0d6fa0a63b5d"
+        "outputId": "5b3b524f-80ab-4e14-8de7-4a6812891858"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7cd377e92850>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7cd3898509d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 89
         }
       ],
       "source": [
@@ -140,58 +173,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "class IDM():\n",
-        "    ''' Intelligent Driving Model for Longitudinal Control\n",
-        "\n",
-        "    Control parameters:\n",
-        "      a: maximum acceleration\n",
-        "      b: comfortable deceleration\n",
-        "      delta: acceleration exponent\n",
-        "      T: safe time headway\n",
-        "\n",
-        "    Parameters:\n",
-        "      s0: minimum gap\n",
-        "      v0: desired speed\n",
-        "\n",
-        "      a (Maximum Acceleration): How fast the vehicle can speed up (m/s²).\n",
-        "      b (Comfortable Deceleration): How smoothly the vehicle slows down (m/s²).\n",
-        "      δ (Acceleration Exponent): The non-linearity factor in acceleration.\n",
-        "      T (Safe Time Headway): The desired minimum following time gap (s).\n",
-        "\n",
-        "    Input variables:\n",
-        "      s: current gap\n",
-        "      v: current vehicle speed\n",
-        "      delta_v: relative speed (difference between the vehicle's speed and the leading vehicle's speed)\n",
-        "    '''\n",
-        "\n",
-        "    def __init__(self, desired_parameters, control_parameters):\n",
-        "\n",
-        "\n",
-        "    def longitudinal_controller(self, input_variables):\n",
-        "        # Unpack input variables: [s, v, delta_v]\n",
-        "        s, v, delta_v = input_variables\n",
-        "\n",
-        "        # Small epsilon to account for very small gaps and avoid division by zero\n",
-        "        epsilon = 1e-6\n",
-        "\n",
-        "        # Desired gap: s* = s0 + v*T + (v * delta_v) / (2 * sqrt(a * b))\n",
-        "        desired_gap = self.s0 + max(0, v * self.T + ((v * delta_v) / (2 * math.sqrt(self.a * self.b))))\n",
-        "\n",
-        "        # IDM acceleration: a_IDM = a * [ 1 - (v / v0)^delta - (s* / s)^2 ]\n",
-        "        acceleration = self.a * (1 - (v / self.v0)**self.delta - (desired_gap / (s + epsilon))**2)\n",
-        "\n",
-        "        return acceleration"
-      ],
-      "metadata": {
-        "id": "VIZJ8ikyFhuw"
-      },
-      "execution_count": 71,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 91,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -407,7 +389,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 80,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -421,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 94,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -540,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -588,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
@@ -737,18 +719,15 @@
         "\n",
         "        # Get action and value from model\n",
         "        with torch.no_grad():\n",
-        "            action, log_prob, value = model.action(state_tensor)\n",
-        "            state_manager.action(obs,action)\n",
-        "\n",
-        "        # Combine longitudinal and lateral actions\n",
-        "        action = state_manager.action(obs,agent_action.item())\n",
+        "            agent_action, log_prob, value = model.action(state_tensor)\n",
+        "            action = state_manager.action(obs,agent_action)\n",
         "\n",
         "        # Take action in environment\n",
         "        obs, reward, done, truncated, info = env.step(action)\n",
         "        done = done or truncated\n",
         "\n",
         "        # Update state manager with new observation and applied longitudinal control\n",
-        "        state_manager = ENV(obs, longitudinal_control)\n",
+        "        state_manager.update(obs)\n",
         "\n",
         "        # Compute reward based on the new state\n",
         "        reward_components = state_manager.reward_function(obs_old, obs, target_id)\n",
@@ -764,6 +743,7 @@
         "        buffer_state_values[t] = value\n",
         "        buffer_rewards[t] = torch.tensor(reward, dtype=torch.float32, device=device)\n",
         "        buffer_is_terminal[t] = done\n",
+        "\n",
         "        t += 1  # Increment timestep counter\n",
         "        obs_old = obs\n",
         "\n",
@@ -848,11 +828,7 @@
         "            b_adv, obs_batch, action_batch, old_log_probs, old_state_values = batch_data\n",
         "\n",
         "            # Forward pass\n",
-        "            action_logits, value = model(obs_batch)\n",
-        "            action_mean = torch.tanh(action_logits)\n",
-        "            action_std = torch.ones_like(action_mean) * 0.1\n",
-        "            m = torch.distributions.Normal(action_mean, action_std)\n",
-        "            log_probs = m.log_prob(action_batch).sum(dim=-1)\n",
+        "            _, log_probs, value = model.action(obs_batch)\n",
         "\n",
         "            # Calculate ratio\n",
         "            ratio = torch.exp(log_probs - old_log_probs)\n",
