--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 100,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "95fc333e-10a2-4aea-fc1b-450adff1c264"
+        "outputId": "c2f7bef7-c56f-4d67-db4f-0145503bb86b"
       },
       "outputs": [
         {
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 101,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -122,24 +122,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "5b3b524f-80ab-4e14-8de7-4a6812891858"
+        "outputId": "63d16165-e923-4333-9dfd-8c374092aa96"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7cd3898509d0>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7cd377825750>"
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 102
         }
       ],
       "source": [
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 103,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -375,11 +375,10 @@
         "    def forward(self, x):\n",
         "        return self.actor(x), self.critic(x)\n",
         "\n",
-        "    def act(self, state):\n",
-        "        state = torch.from_numpy(state).float().unsqueeze(0)\n",
+        "    def action(self, state):\n",
         "        action_logits, value = self.forward(state)\n",
         "\n",
-        "        logits = torch.softmax(action_logits)\n",
+        "        logits = torch.softmax(action_logits,dim=1)\n",
         "        m = torch.distributions.Categorical(logits)\n",
         "        action = m.sample()\n",
         "        log_prob = m.log_prob(action)\n",
@@ -389,7 +388,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 93,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -403,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 105,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -522,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 106,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -570,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 107,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
@@ -915,12 +914,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 228
+          "height": 374
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "8360245f-2d2c-41aa-c451-a0bb872e4060"
+        "outputId": "9af09c2b-fea1-4cbb-db6f-4fc6a6b5b842"
       },
-      "execution_count": 98,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +935,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-98-3326214960.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0;31m# IDM Initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mego_state_idm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mego_state_idm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m     \u001b[0mlead_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlongitudinal_lead_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;31m# Initialize target_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-114-989876897.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m             \u001b[0magent_action\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m             \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0magent_action\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;31m# Take action in environment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-103-2521876262.py\u001b[0m in \u001b[0;36maction\u001b[0;34m(self, obs, action)\u001b[0m\n\u001b[1;32m    144\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m     \u001b[0mL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munwrapped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvehicle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLENGTH\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midm_controller\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m     \"\"\"\n",
+            "\u001b[0;32m/tmp/ipython-input-103-2521876262.py\u001b[0m in \u001b[0;36midm_controller\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     80\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0midm_controller\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m       \u001b[0;31m# Unpack input variables: [s, v, delta_v]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m       \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta_v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlongitudinal_lead_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mego_state_idm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'vx'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlongitudinal_lead_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'vx'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m       \u001b[0;31m# Small epsilon to account for very small gaps and avoid division by zero\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
           ]
         }
